fix: resolve compilation and runtime bugs for test compatibility
- Fix JwtTokenProvider: refactor method signatures for testability
- Fix TreatmentPlan model: add missing field accessor
- Fix TreatmentPlanServiceImpl: correct method reference
- Fix ChatMessageServiceImpl: resolve parameter mismatch
- Fix UserServiceImpl: correct method call signatures
- Fix PatientService/PatientRepository: align interface methods
- Add SeedProperties config class for seed data management
- Add PatientV2Repository for isolated patient entity queries
- Fix TenantRepositoryConfig: resolve bean wiring issue
- Add missing @SuppressWarnings to seeders for deprecation cleanup